fix link to github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>dev.tiqav.com by tiqav</title>
+    <title>dev.tiqav.com</title>
   </head>
 
   <body>
@@ -21,12 +21,6 @@
           <h1>dev.tiqav.com</h1>
           <h2>tiqav API Documentation</h2>
         </header>
-
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/tiqav/dev.tiqav.com/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/tiqav/dev.tiqav.com/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/tiqav/dev.tiqav.com" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
 
         <hr>
 
@@ -182,6 +176,12 @@ _method=DELETE&amp;tags=[comma,separated,tags]&amp;callback=[fucntion_name]
 </ul>
 </li>
 </ul>
+        </section>
+
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/tiqav/dev.tiqav.com/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/tiqav/dev.tiqav.com/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/tiqav/dev.tiqav.com" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <footer>
