--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>dev.tiqav.com</title>
+    <link href='http://img.tiqav.com/images/favicon.ico' rel='shortcut icon' type='image/x-icon' />
   </head>
 
   <body>
