Fix a wrong URL

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 
 <h3>POST images</h3>
 
-<pre><code>http://api.tiqav.com/images.json
-url=[http://example.com/image.(jpe?g|png|gif)]&amp;serifu=[画像内のセリフ、テロップ等の文字列]&amp;tags=[comma,separated,tags]&amp;callback=[fucntion_name]
+<pre><code>http://api.tiqav.com/images.json?url=[http://example.com/image.(jpe?g|png|gif)]&amp;serifu=[画像内のセリフ、テロップ等の文字列]&amp;tags=[comma,separated,tags]&amp;callback=[fucntion_name]
 </code></pre>
 
 <ul>
